# SWOT-analysis-tool

./: .gitignore  CMakeLists.txt  main.cpp
Models/: SWOTItem.cpp  SWOTItem.h
